API追加